<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preferences_category_streaming_title" >
        <ListPreference
            android:defaultValue="quality_hq"
            android:dialogTitle="@string/preferences_quality_dialog_title"
            android:entries="@array/quality_options_entries"
            android:entryValues="@array/quality_options_values"
            android:key="quality"
            android:title="@string/preferences_quality_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_category_sleepmode_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="sleep_mode"
            android:summaryOff="@string/preferences_sleepmode_checkbox_description_off"
            android:summaryOn="@string/preferences_sleepmode_checkbox_description_on"
            android:title="@string/preferences_sleepmode_checkbox_title" />

        <com.emp.friskyplayer.preferences.TimeOutSeekBarPreference
            android:defaultValue="30"
            android:dependency="sleep_mode"
            android:key="sleep_mode_timeout"
            android:summary="desc"
            android:title="@string/preferences_sleepmode_timeout_title" />
    </PreferenceCategory>

</PreferenceScreen>